--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>dist-file-transfer</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Distributed File Transfer Network</description>
 
 	<properties>
 		<java.version>1.8</java.version>
